# playground_amazon_product_search

./: README.md  go.mod  go.sum
client/: client.go  converter.go  index.go  search.go
client/template/: search_dsl.tmpl  search_strict_dsl.tmpl
cmd/: main.go
elasticsearch/: Dockerfile  README  boot.sh  docker-compose.yml  mappings.json  settings.json
index/: build.go
logging/: logging.go
model/: model.go
proto/: search.pb.go  search.proto  search_grpc.pb.go  search_pb2.py
python/: README.md  pyproject.toml
python/notebooks/: exp.ipynb  expRetrievalRecall.ipynb  makeDataset.ipynb  makeSWEM.ipynb  swemLightGBM.ipynb
python/proto/: search_pb2.py  search_pb2.pyi  search_pb2_grpc.py
search/: converter.go  search.go
service/: search.go
