[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["keeeeei79 <keeeeei79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = {version = "^0.16.0", extras = ["numpy", "pandas", "pyarrow"]}
protobuf = "^4.24.0"
grpcio = "^1.56.2"
grpcio-tools = "^1.56.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
